--- a/index.html
+++ b/index.html
@@ -16,44 +16,44 @@
       </header>
       <main>
         <div class="board-row">
+          <div class="board-block" data-index="00"></div>
           <div class="board-block" data-index="01"></div>
           <div class="board-block" data-index="02"></div>
           <div class="board-block" data-index="03"></div>
           <div class="board-block" data-index="04"></div>
           <div class="board-block" data-index="05"></div>
-          <div class="board-block" data-index="06"></div>
         </div>
         <div class="board-row">
+          <div class="board-block" data-index="06"></div>
           <div class="board-block" data-index="07"></div>
           <div class="board-block" data-index="08"></div>
           <div class="board-block" data-index="09"></div>
           <div class="board-block" data-index="10"></div>
           <div class="board-block" data-index="11"></div>
-          <div class="board-block" data-index="12"></div>
         </div>
         <div class="board-row">
+          <div class="board-block" data-index="12"></div>
           <div class="board-block" data-index="13"></div>
           <div class="board-block" data-index="14"></div>
           <div class="board-block" data-index="15"></div>
           <div class="board-block" data-index="16"></div>
           <div class="board-block" data-index="17"></div>
-          <div class="board-block" data-index="18"></div>
         </div>
         <div class="board-row">
+          <div class="board-block" data-index="18"></div>
           <div class="board-block" data-index="19"></div>
           <div class="board-block" data-index="20"></div>
           <div class="board-block" data-index="21"></div>
           <div class="board-block" data-index="22"></div>
           <div class="board-block" data-index="23"></div>
-          <div class="board-block" data-index="24"></div>
         </div>
         <div class="board-row">
+          <div class="board-block" data-index="24"></div>
           <div class="board-block" data-index="25"></div>
           <div class="board-block" data-index="26"></div>
           <div class="board-block" data-index="27"></div>
           <div class="board-block" data-index="28"></div>
           <div class="board-block" data-index="29"></div>
-          <div class="board-block" data-index="30"></div>
         </div>
       </main>
       <footer>
@@ -97,5 +97,6 @@
         </div>
       </footer>
     </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
