--- a/index.html
+++ b/index.html
@@ -9,94 +9,89 @@
     <link rel="stylesheet" href="style/css/main.css" />
   </head>
   <body>
-    <div class="outline">
-      <header>
-        <h1>Wordle</h1>
-        <strong id="timer"></strong>
-      </header>
-      <main>
-        <div class="board-row">
-          <div class="board-block" data-index="00"></div>
-          <div class="board-block" data-index="01"></div>
-          <div class="board-block" data-index="02"></div>
-          <div class="board-block" data-index="03"></div>
-          <div class="board-block" data-index="04"></div>
-          <div class="board-block" data-index="05"></div>
+    <header>
+      <h1>Wordle</h1>
+      <strong id="timer"></strong>
+    </header>
+    <main>
+      <div id="timer"></div>
+      <div class="board-row">
+        <div class="board-block" data-index="00"></div>
+        <div class="board-block" data-index="01"></div>
+        <div class="board-block" data-index="02"></div>
+        <div class="board-block" data-index="03"></div>
+        <div class="board-block" data-index="04"></div>
+      </div>
+      <div class="board-row">
+        <div class="board-block" data-index="05"></div>
+        <div class="board-block" data-index="06"></div>
+        <div class="board-block" data-index="07"></div>
+        <div class="board-block" data-index="08"></div>
+        <div class="board-block" data-index="09"></div>
+      </div>
+      <div class="board-row">
+        <div class="board-block" data-index="11"></div>
+        <div class="board-block" data-index="12"></div>
+        <div class="board-block" data-index="13"></div>
+        <div class="board-block" data-index="14"></div>
+        <div class="board-block" data-index="15"></div>
+      </div>
+      <div class="board-row">
+        <div class="board-block" data-index="16"></div>
+        <div class="board-block" data-index="17"></div>
+        <div class="board-block" data-index="18"></div>
+        <div class="board-block" data-index="19"></div>
+        <div class="board-block" data-index="20"></div>
+      </div>
+      <div class="board-row">
+        <div class="board-block" data-index="21"></div>
+        <div class="board-block" data-index="22"></div>
+        <div class="board-block" data-index="23"></div>
+        <div class="board-block" data-index="24"></div>
+        <div class="board-block" data-index="25"></div>
+      </div>
+    </main>
+    <footer>
+      <div class="keyboard-row">
+        <div class="keyboard-item" data-key="Q">Q</div>
+        <div class="keyboard-item" data-key="W">W</div>
+        <div class="keyboard-item" data-key="E">E</div>
+        <div class="keyboard-item" data-key="R">R</div>
+        <div class="keyboard-item" data-key="T">T</div>
+        <div class="keyboard-item" data-key="Y">Y</div>
+        <div class="keyboard-item" data-key="U">U</div>
+        <div class="keyboard-item" data-key="I">I</div>
+        <div class="keyboard-item" data-key="O">O</div>
+        <div class="keyboard-item" data-key="P">P</div>
+      </div>
+      <div class="keyboard-row">
+        <div class="keyboard-item" data-key="A">A</div>
+        <div class="keyboard-item" data-key="S">S</div>
+        <div class="keyboard-item" data-key="D">D</div>
+        <div class="keyboard-item" data-key="F">F</div>
+        <div class="keyboard-item" data-key="G">G</div>
+        <div class="keyboard-item" data-key="H">H</div>
+        <div class="keyboard-item" data-key="J">J</div>
+        <div class="keyboard-item" data-key="K">K</div>
+        <div class="keyboard-item" data-key="L">L</div>
+      </div>
+      <div class="keyboard-row">
+        <div class="keyboard-item btn-enter" data-key="ENTER">
+          <img src="img/enter.svg" alt="" />
         </div>
-        <div class="board-row">
-          <div class="board-block" data-index="06"></div>
-          <div class="board-block" data-index="07"></div>
-          <div class="board-block" data-index="08"></div>
-          <div class="board-block" data-index="09"></div>
-          <div class="board-block" data-index="10"></div>
-          <div class="board-block" data-index="11"></div>
+        <div class="keyboard-item" data-key="Z">Z</div>
+        <div class="keyboard-item" data-key="X">X</div>
+        <div class="keyboard-item" data-key="C">C</div>
+        <div class="keyboard-item" data-key="V">V</div>
+        <div class="keyboard-item" data-key="B">B</div>
+        <div class="keyboard-item" data-key="N">N</div>
+        <div class="keyboard-item" data-key="M">M</div>
+        <div class="keyboard-item btn-back" data-key="BACK">
+          <img src="img/back.svg" alt="" />
         </div>
-        <div class="board-row">
-          <div class="board-block" data-index="12"></div>
-          <div class="board-block" data-index="13"></div>
-          <div class="board-block" data-index="14"></div>
-          <div class="board-block" data-index="15"></div>
-          <div class="board-block" data-index="16"></div>
-          <div class="board-block" data-index="17"></div>
-        </div>
-        <div class="board-row">
-          <div class="board-block" data-index="18"></div>
-          <div class="board-block" data-index="19"></div>
-          <div class="board-block" data-index="20"></div>
-          <div class="board-block" data-index="21"></div>
-          <div class="board-block" data-index="22"></div>
-          <div class="board-block" data-index="23"></div>
-        </div>
-        <div class="board-row">
-          <div class="board-block" data-index="24"></div>
-          <div class="board-block" data-index="25"></div>
-          <div class="board-block" data-index="26"></div>
-          <div class="board-block" data-index="27"></div>
-          <div class="board-block" data-index="28"></div>
-          <div class="board-block" data-index="29"></div>
-        </div>
-      </main>
-      <footer>
-        <div class="keyboard-row">
-          <div class="keyboard-item" data-key="Q">Q</div>
-          <div class="keyboard-item" data-key="W">W</div>
-          <div class="keyboard-item" data-key="E">E</div>
-          <div class="keyboard-item" data-key="R">R</div>
-          <div class="keyboard-item" data-key="T">T</div>
-          <div class="keyboard-item" data-key="Y">Y</div>
-          <div class="keyboard-item" data-key="U">U</div>
-          <div class="keyboard-item" data-key="I">I</div>
-          <div class="keyboard-item" data-key="O">O</div>
-          <div class="keyboard-item" data-key="P">P</div>
-        </div>
-        <div class="keyboard-row">
-          <div class="keyboard-item" data-key="A">A</div>
-          <div class="keyboard-item" data-key="S">S</div>
-          <div class="keyboard-item" data-key="D">D</div>
-          <div class="keyboard-item" data-key="F">F</div>
-          <div class="keyboard-item" data-key="G">G</div>
-          <div class="keyboard-item" data-key="H">H</div>
-          <div class="keyboard-item" data-key="J">J</div>
-          <div class="keyboard-item" data-key="K">K</div>
-          <div class="keyboard-item" data-key="L">L</div>
-        </div>
-        <div class="keyboard-row">
-          <div class="keyboard-item btn-enter" data-key="ENTER">
-            <img src="img/enter.svg" alt="" />
-          </div>
-          <div class="keyboard-item" data-key="Z">Z</div>
-          <div class="keyboard-item" data-key="X">X</div>
-          <div class="keyboard-item" data-key="C">C</div>
-          <div class="keyboard-item" data-key="V">V</div>
-          <div class="keyboard-item" data-key="B">B</div>
-          <div class="keyboard-item" data-key="N">N</div>
-          <div class="keyboard-item" data-key="M">M</div>
-          <div class="keyboard-item btn-back" data-key="BACK">
-            <img src="img/back.svg" alt="" />
-          </div>
-        </div>
-      </footer>
-    </div>
+      </div>
+    </footer>
+
     <script src="js/app.js"></script>
   </body>
 </html>
